Landing page responsiveness + Services Draft

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <div class="logo">
         <a href="">Jera.</a>
       </div>
-      <nav>
+       <button class="hamburger" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <nav id="main-nav">
         <a href="#">Home</a>
         <a href="#">Services</a>
         <a href="#">Pricing</a>
@@ -63,6 +68,44 @@
         </div>
       </div>
     </section>
+    <section class="services">
+      <div class="title">
+        <h1>Our Services.</h1>
+        <div class="divider"></div>
+        <p>Simply Dummy Text of the printing and typesetting industry.</p>
+      </div>
+      <div class="services-container">
+        <div class="service">
+         <i class="fa-solid fa-display"></i>
+          <h2>Creative Designers</h2>
+          <p>
+           Lorem Ipsum is simply dummy text of the printing
+          </p>
+        </div>
+        <div class="service">
+          <i class="fa-solid fa-database"></i>
+          <h2>IOS Developer</h2>
+          <p>
+           Lorem Ipsum is simply dummy text of the printing
+          </p>
+        </div>
+        <div class="service">
+         <i class="fa-solid fa-network-wired"></i>
+          <h2>Maintainance</h2>
+          <p>
+           Lorem Ipsum is simply dummy text of the printing
+          </p>
+        </div>
+        <div class="service">
+          <i class="fa-regular fa-calendar"></i>
+          <h2>Time Management</h2>
+          <p>
+            Lorem Ipsum is simply dummy text of the printing
+          </p>
+        </div>
+      </div>
+    </section>
     <script src="scripts.js"></script>
+    <script src="navbar.js"></script>
   </body>
 </html>
