Final Draft of Services Section, Facts and Features

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="logo">
         <a href="">Jera.</a>
       </div>
-       <button class="hamburger" aria-label="Toggle navigation">
+      <button class="hamburger" aria-label="Toggle navigation">
         <span></span>
         <span></span>
         <span></span>
@@ -54,10 +54,10 @@
       </nav>
     </header>
     <section class="landing">
-      <div class="left">
+      <div class="hero-left">
         <img src="assets/04.jpg" alt="" />
       </div>
-      <div class="right">
+      <div class="hero-right">
         <div class="right-container">
           <div class="right-txt">
             <h1>Jeera agency is ready to take your project.</h1>
@@ -76,32 +76,77 @@
       </div>
       <div class="services-container">
         <div class="service">
-         <i class="fa-solid fa-display"></i>
+          <i class="fa-solid fa-display"></i>
           <h2>Creative Designers</h2>
-          <p>
-           Lorem Ipsum is simply dummy text of the printing
-          </p>
+          <p>Lorem Ipsum is simply dummy text of the printing</p>
         </div>
         <div class="service">
           <i class="fa-solid fa-database"></i>
           <h2>IOS Developer</h2>
-          <p>
-           Lorem Ipsum is simply dummy text of the printing
-          </p>
+          <p>Lorem Ipsum is simply dummy text of the printing</p>
         </div>
         <div class="service">
-         <i class="fa-solid fa-network-wired"></i>
+          <i class="fa-solid fa-network-wired"></i>
           <h2>Maintainance</h2>
-          <p>
-           Lorem Ipsum is simply dummy text of the printing
-          </p>
+          <p>Lorem Ipsum is simply dummy text of the printing</p>
         </div>
         <div class="service">
           <i class="fa-regular fa-calendar"></i>
           <h2>Time Management</h2>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing
-          </p>
+          <p>Lorem Ipsum is simply dummy text of the printing</p>
+        </div>
+      </div>
+    </section>
+    <section class="features">
+      <div class="features-container">
+        <div class="title">
+          <h1>Our Features.</h1>
+          <div class="divider"></div>
+          <p>Simply Dummy Text of the printing and typesetting industry.</p>
+        </div>
+        <div class="features-icons">
+          <div class="feature">
+            <i class="fa-solid fa-gear" style="font-size: 50px;"></i>
+            <h2>Technical Solutions</h2>
+            <p>The page to let us know how we can make it even better.</p>
+          </div>
+          <div class="feature">
+            <i class="fa-solid fa-circle-minus" style="font-size: 50px;"></i>
+            <h2>Unlimited Features</h2>
+            <p>The page to let us know how we can make it even better.</p>
+          </div>
+        </div>
+      </div>
+      <div class="features-right">
+        <img src="assets/05.jpg" alt="" />
+      </div>
+    </section>
+    <section class="facts">
+       <div class="title-white">
+        <h1>Some Facts.</h1>
+        <div class="divider"></div>
+        <p>Simply Dummy Text of the printing and typesetting industry.</p>
+      </div>
+      <div class="facts-container">
+        <div class="facts-card">
+          <i class="fa-solid fa-database" style="color: #ffffff; font-size: 40px;"></i>
+          <h3>400</h3>
+          <h3>Projects</h3>
+        </div>
+        <div class="facts-card">
+          <i class="fa-solid fa-gear" style="color: #ffffff; font-size: 40px;"></i>
+          <h3>398</h3>
+          <h3>Clients</h3>
+        </div>
+        <div class="facts-card">
+          <i class="fa-solid fa-message" style="color: #ffffff; font-size: 40px;"></i>
+          <h3>4555</h3>
+          <h3>Reviews</h3>
+        </div>
+        <div class="facts-card">
+          <i class="fa-solid fa-star" style="color: #ffffff; font-size: 40px;"></i>
+          <h3>3</h3>
+          <h3>Awards</h3>
         </div>
       </div>
     </section>
