Pricing + about section final draft

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1>Jeera agency is ready to take your project.</h1>
           </div>
           <div class="right-button">
-            <button>READ MORE</button>
+            <button class="black-btn">READ MORE</button>
           </div>
         </div>
       </div>
@@ -106,12 +106,12 @@
         </div>
         <div class="features-icons">
           <div class="feature">
-            <i class="fa-solid fa-gear" style="font-size: 50px;"></i>
+            <i class="fa-solid fa-gear" style="font-size: 50px"></i>
             <h2>Technical Solutions</h2>
             <p>The page to let us know how we can make it even better.</p>
           </div>
           <div class="feature">
-            <i class="fa-solid fa-circle-minus" style="font-size: 50px;"></i>
+            <i class="fa-solid fa-circle-minus" style="font-size: 50px"></i>
             <h2>Unlimited Features</h2>
             <p>The page to let us know how we can make it even better.</p>
           </div>
@@ -122,34 +122,116 @@
       </div>
     </section>
     <section class="facts">
-       <div class="title-white">
+      <div class="title-white">
         <h1>Some Facts.</h1>
         <div class="divider"></div>
         <p>Simply Dummy Text of the printing and typesetting industry.</p>
       </div>
       <div class="facts-container">
         <div class="facts-card">
-          <i class="fa-solid fa-database" style="color: #ffffff; font-size: 40px;"></i>
+          <i
+            class="fa-solid fa-database"
+            style="color: #ffffff; font-size: 40px"
+          ></i>
           <h3>400</h3>
           <h3>Projects</h3>
         </div>
         <div class="facts-card">
-          <i class="fa-solid fa-gear" style="color: #ffffff; font-size: 40px;"></i>
+          <i
+            class="fa-solid fa-gear"
+            style="color: #ffffff; font-size: 40px"
+          ></i>
           <h3>398</h3>
           <h3>Clients</h3>
         </div>
         <div class="facts-card">
-          <i class="fa-solid fa-message" style="color: #ffffff; font-size: 40px;"></i>
+          <i
+            class="fa-solid fa-message"
+            style="color: #ffffff; font-size: 40px"
+          ></i>
           <h3>4555</h3>
           <h3>Reviews</h3>
         </div>
         <div class="facts-card">
-          <i class="fa-solid fa-star" style="color: #ffffff; font-size: 40px;"></i>
+          <i
+            class="fa-solid fa-star"
+            style="color: #ffffff; font-size: 40px"
+          ></i>
           <h3>3</h3>
           <h3>Awards</h3>
         </div>
       </div>
     </section>
+    <section class="pricing">
+      <div class="title">
+        <h1>Our Pricing.</h1>
+        <div class="divider"></div>
+        <p>Simply Dummy Text of the printing and typesetting industry.</p>
+      </div>
+      <div class="pricing-container">
+        <div class="pricing-card">
+          <i class="fa-regular fa-user"></i>
+          <h4><b>Regular</b></h4>
+          <h2><b>$19/hr</b></h2>
+          <ul>
+            <li>Unlimited Access</li>
+            <li>100 Templates</li>
+            <li>Unlimited Icons</li>
+            <li>10GB Storage</li>
+            <li>Customer Service</li>
+          </ul>
+          <button>Choose</button>
+        </div>
+        <div class="pricing-card">
+          <i class="fa-solid fa-users"></i>
+          <h4><b>Regular</b></h4>
+          <h2><b>$29/hr</b></h2>
+          <ul>
+            <li>Unlimited Access</li>
+            <li>100 Templates</li>
+            <li>Unlimited Icons</li>
+            <li>10GB Storage</li>
+            <li>Customer Service</li>
+          </ul>
+          <button>Choose</button>
+        </div>
+        <div class="pricing-card">
+          <i class="fa-solid fa-globe"></i>
+          <h4><b>Regular</b></h4>
+          <h2><b>$59/hr</b></h2>
+          <ul>
+            <li>Unlimited Access</li>
+            <li>100 Templates</li>
+            <li>Unlimited Icons</li>
+            <li>10GB Storage</li>
+            <li>Customer Service</li>
+          </ul>
+          <button>Choose</button>
+        </div>
+      </div>
+    </section>
+    <section class="about-hero">
+      <div class="about-left">
+        <img src="assets/06.jpg" alt="Workspace" />
+      </div>
+      <div class="about-right">
+        <h1>We do what<br />other people<br />can’t.</h1>
+        <p>
+          Simply dummy text of the printing and typesetting industry.<br />
+          Lorem Ipsum has been the industry's standard dummy text ever since the
+          1500s, when an unknown printer took a galley of type and scrambled it
+          to make a type specimen book.
+        </p>
+        <p>
+          Simply dummy text of the printing and typesetting industry.<br />
+          Lorem Ipsum has been the industry's standard dummy text ever since the
+          1500s, when an unknown printer took a galley of type and scrambled it
+          to make a type specimen book.
+        </p>
+        <button class="black-btn">READ MORE</button>
+      </div>
+    </section>
+    <section class="other"></section>
     <script src="scripts.js"></script>
     <script src="navbar.js"></script>
   </body>
