Final Draft of all section without FAQ section

--- a/index.html
+++ b/index.html
@@ -231,7 +231,162 @@
         <button class="black-btn">READ MORE</button>
       </div>
     </section>
-    <section class="other"></section>
+    <section class="portfolio">
+      <div class="title">
+        <h1>Our Portfolio.</h1>
+        <div class="divider"></div>
+        <p>Simply Dummy Text of the printing and typesetting industry.</p>
+      </div>
+      <div class="portfolio-filter">
+        <button class="active">All</button>
+        <button>Images</button>
+        <button>Videos</button>
+        <button>Projects</button>
+      </div>
+      <div class="portfolio-grid">
+        <div class="portfolio-item" data-label="Xtra">
+          <img src="assets/08.jpg" alt="Portfolio 1" />
+        </div>
+        <div class="portfolio-item" data-label="Revolve">
+          <img src="assets/09.jpg" alt="Portfolio 2" />
+        </div>
+        <div class="portfolio-item" data-label="Lovely">
+          <img src="assets/10.jpg" alt="Portfolio 3" />
+        </div>
+        <div class="portfolio-item" data-label="Qyar">
+          <img src="assets/11.jpg" alt="Portfolio 4" />
+        </div>
+        <div class="portfolio-item" data-label="Uranus">
+          <img src="assets/12.jpg" alt="Portfolio 5" />
+        </div>
+        <div class="portfolio-item" data-label="Hareo">
+          <img src="assets/13.jpg" alt="Portfolio 6" />
+        </div>
+        <div class="portfolio-item" data-label="Moment">
+          <img src="assets/14.jpg" alt="Portfolio 7" />
+        </div>
+        <div class="portfolio-item" data-label="Onion">
+          <img src="assets/15.jpg" alt="Portfolio 8" />
+        </div>
+      </div>
+    </section>
+    <section class="newsletter">
+      <div class="title-white">
+        <h1>Subscribe to our Newsletter.</h1>
+        <div class="divider"></div>
+        <p>Simply Dummy Text of the printing and typesetting industry.</p>
+      </div>
+      <form class="newsletter-form">
+        <input type="email" placeholder="Enter E-mail Address" required />
+        <p class="newsletter-note">
+          * We promise we will never spam your account. *
+        </p>
+        <button type="submit" class="newsletter-btn">SUBSCRIBE</button>
+      </form>
+    </section>
+    <section class="features">
+      <div class="features-container">
+        <div class="title">
+          <h1>Our Features.</h1>
+          <div class="divider"></div>
+          <p>Simply Dummy Text of the printing and typesetting industry.</p>
+        </div>
+        <div class="features-texts"></div>
+      </div>
+      <div class="features-right">
+        <img src="assets/16.jpg" alt="" />
+      </div>
+    </section>
+    <section class="contact">
+      <div class="title">
+        <h1>Contact Us.</h1>
+        <div class="divider"></div>
+        <p>Simply Dummy Text of the printing and typesetting industry.</p>
+      </div>
+      <div class="contact-container">
+        <div class="contact-info">
+          <div class="contact-block">
+            <i class="fa-solid fa-phone fa-2x"></i>
+            <h2>Call Us</h2>
+            <p>+1 929 309 8114</p>
+          </div>
+          <div class="contact-block">
+            <i class="fa-solid fa-envelope fa-2x"></i>
+            <h2>Email Us</h2>
+            <p>contact@bela.com</p>
+          </div>
+          <div class="contact-block">
+            <i class="fa-solid fa-location-dot fa-2x"></i>
+            <h2>Visit Us</h2>
+            <p>7381 Branch Rd. Flushing, NY 11354</p>
+          </div>
+        </div>
+        <form class="contact-form">
+          <div class="form-row">
+            <input type="text" placeholder="First Name *" required />
+            <input type="text" placeholder="Last Name *" required />
+          </div>
+          <input type="email" placeholder="E-mail Address *" required />
+          <input type="text" placeholder="Phone Number" />
+          <textarea placeholder="Your Messages *" required></textarea>
+          <button type="submit" class="contact-btn">SEND MESSAGE</button>
+        </form>
+      </div>
+    </section>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-section">
+          <h1>Jera.</h1>
+          <p>
+            Cras mattis consectetur purus sit amet fermentum. Donec ullamcorper
+            mattis consectetur nulla non metus.
+          </p>
+            <a href="" >Terms & Conditions |  </a>  <a href="">Privacy Policy</a>
+        </div>
+
+        <div class="footer-section">
+          <h2>Newsletter</h2>
+          <form>
+            <input type="email" placeholder="Your email" />
+            <button type="submit">SUBSCRIBE</button>
+          </form>
+        </div>
+
+        <div class="footer-section">
+          <h2>Links</h2>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Stories</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h2>Social</h2>
+          <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Behance</a></li>
+            <li><a href="#">Dribble</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h2>Gallery</h2>
+          <div class="gallery">
+            <img src="assets/13.jpg" alt="Gallery Image 1" />
+            <img src="assets/12.jpg" alt="Gallery Image 2" />
+            <img src="assets/15.jpg" alt="Gallery Image 3" />
+            <img src="assets/14.jpg" alt="Gallery Image 4" />
+            <img src="assets/11.jpg" alt="Gallery Image 5" />
+            <img src="assets/09.jpg" alt="Gallery Image 6" />
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="scripts.js"></script>
     <script src="navbar.js"></script>
   </body>
